@@ -29,6 +29,7 @@ extras_require['tests'] = tests_require = [
     'ftw.contentpage',
     'ftw.shop',
     'ftw.builder',
+    'plonetheme.onegov',
 
     ] + reduce(list.__add__, extras_require.values())
 
